--- a/index.html
+++ b/index.html
@@ -5,56 +5,122 @@
   <title>Yiğit &amp; Gözde Düğün Davetiyesi</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    :root { --primary:#1e3a8a; }
+    :root {
+      /* Ana palet – şeftali tonları */
+      --primary: #E8755A;          /* ana vurgu rengi */
+      --primary-dark: #C86048;     /* koyu tonu */
+      --primary-light: #F1A995;    /* açık tonu */
+      --text-dark: #442723;        /* metin için kontrastlı koyu */
+      --text-muted: #6b4b46;       /* ikincil metin */
+      --surface: #fff7f5;          /* arka plan yumuşak */
+    }
+
     body {
-      margin:0;
-      padding:0;
-      font-family:'Inter',sans-serif;
-      background:#f8fafc;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      min-height:100vh;
+      margin: 0;
+      padding: 0;
+      font-family: 'Inter', sans-serif;
+      background: var(--surface);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
+
     .card {
-      background:#ffffff;
-      max-width:600px;
-      width:90%;
-      border-radius:1.5rem;
-      box-shadow:0 10px 25px rgba(0,0,0,.1);
-      padding:2.5rem 3rem;
-      text-align:center;
+      background: #ffffff;
+      max-width: 600px;
+      width: 90%;
+      border-radius: 1.5rem;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, .05);
+      padding: 2.5rem 3rem;
+      text-align: center;
     }
-    .card h1 { margin-top:0;font-size:2.5rem;color:var(--primary); }
-    .card h2 { margin:0.5rem 0;font-size:1.5rem;font-weight:400;color:#475569; }
-    .divider { width:60px;height:2px;background:var(--primary);margin:1.2rem auto; }
-    .card p { margin:0.8rem 0;color:#334155;font-size:1rem; }
-    .details { margin-top:1.5rem;font-size:1.1rem;color:#0f172a; }
-    img.qr { margin-top:2rem;width:100px;height:100px; }
-    img.banner { width:120px;height:auto;border-radius:1rem;margin-bottom:1rem; }
-    #countdown { margin-top:2rem;font-size:1.5rem;font-weight:600;color:var(--primary); }
+
+    .card h1 {
+      margin-top: 0;
+      font-size: 2.5rem;
+      color: var(--primary);
+    }
+    .card h2 {
+      margin: 0.5rem 0;
+      font-size: 1.5rem;
+      font-weight: 400;
+      color: var(--text-muted);
+    }
+    .divider {
+      width: 60px;
+      height: 2px;
+      background: var(--primary);
+      margin: 1.2rem auto;
+    }
+    .card p {
+      margin: 0.8rem 0;
+      color: var(--text-muted);
+      font-size: 1rem;
+    }
+    .details {
+      margin-top: 1.5rem;
+      font-size: 1.1rem;
+      color: var(--text-dark);
+    }
+    img.qr {
+      margin-top: 1.5rem;
+      width: 100px;
+      height: 100px;
+    }
+    img.banner {
+      width: 140px;
+      height: auto;
+      border-radius: 1rem;
+      margin-bottom: 1rem;
+      box-shadow: 0 4px 8px rgba(0,0,0,.08);
+    }
+    #countdown {
+      margin: 1.2rem 0 0.5rem;
+      font-size: 1.4rem;
+      font-weight: 600;
+      color: var(--primary-dark);
+    }
+    iframe {
+      width: 100%;
+      height: 320px;
+      border: 0;
+      border-radius: 1rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,.06);
+    }
   </style>
 </head>
 <body>
   <div class="card">
-    <!-- Placeholder banner image -->
-    <img src="banner_placeholder.png" alt="Yiğit &amp; Gözde" class="banner">
-    
+    <!-- Üst banner -->
+    <img src="banner_placeholder.jpg" alt="Yiğit &amp; Gözde" class="banner">
+
+    <!-- Başlık -->
     <h1>Yiğit &amp; Gözde</h1>
     <h2>19 Temmuz 2025</h2>
+
     <div class="divider"></div>
+
     <p>Sevdiklerimizle birlikte, hayatlarımızı birleştiriyoruz.</p>
     <p>Bu özel günde sizleri aramızda görmekten mutluluk duyarız.</p>
+
+    <!-- Detaylar -->
     <div class="details">
       <p><strong>Tarih:</strong> 19 Temmuz 2025, Cumartesi</p>
       <p><strong>Saat:</strong> 19:30</p>
       <p><strong>Yer:</strong> Svadba Düğün Salonu<br>Tuzla, İstanbul</p>
     </div>
-    <div class="divider"></div>
-    <!-- Google Maps embed for venue -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.69561750923!2d29.310303276556517!3d40.81494283130632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cadd80fdf511ef%3A0xfaec609de05b6131!2sSvadba%20Tuzla%20Marina!5e1!3m2!1str!2str!4v1744898920643!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+    <!-- Geri sayım daha yukarı alındı -->
     <div id="countdown">Yükleniyor...</div>
+
+    <div class="divider" style="margin-top:1rem;"></div>
+
+    <!-- Harita Embed -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.69561750923!2d29.310303276556517!3d40.81494283130632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cadd80fdf511ef%3A0xfaec609de05b6131!2sSvadba%20Tuzla%20Marina!5e1!3m2!1str!2str!4v1744898920643!5m2!1str!2str" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <!-- QR Kod -->
+    <img src="qr_placeholder.png" alt="Konum QR Kodu" class="qr">
   </div>
 
   <script>
@@ -65,7 +131,7 @@
       const now = new Date().getTime();
       const distance = targetDate - now;
 
-      if(distance <= 0) {
+      if (distance <= 0) {
         countdownEl.textContent = "Bugün!";
         clearInterval(interval);
         return;
