--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
   <div class="card">
     <!-- Üst banner -->
-    <img src="banner_placeholder.jpg" alt="Yiğit &amp; Gözde" class="banner">
+    <img src="banner_placeholder.png" alt="Yiğit &amp; Gözde" class="banner">
 
     <!-- Başlık -->
     <h1>Yiğit &amp; Gözde</h1>
