--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Yiğit &amp; Gözde Düğün Davetiyesi</title>
+  <title>Gözde &amp; Yiğit Düğün Davetiyesi</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -96,7 +96,7 @@
     <img src="banner_placeholder.png" alt="Yiğit &amp; Gözde" class="banner">
 
     <!-- Başlık -->
-    <h1>Yiğit &amp; Gözde</h1>
+    <h1>Gözde &amp; Yiğit</h1>
     <h2>19 Temmuz 2025</h2>
 
     <div class="divider"></div>
