--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   </script>
 
   <div class="card">
-    <img src="banner_placeholder.png" alt="Gözde &amp; Yiğit" class="banner">
+    <img src="banner_placeholder.jpg" alt="Gözde &amp; Yiğit" class="banner">
     <h1>Gözde &amp; Yiğit</h1>
     <h2>19 Temmuz 2025</h2>
     <div class="divider"></div>
@@ -117,7 +117,7 @@
     </div>
     <div id="countdown">Yükleniyor...</div>
     <div class="divider" style="margin-top:1rem;"></div>
-    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.69561750923!2d29.310303276556517!3d40.81494283130632!2m3!1f0!2f0;3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cadd80fdf511ef%3A0xfaec609de05b6131!2sSvadba%20Tuzla%20Marina!5e1!3m2!1str!2str!4v1744898920643!5m2!1str!2str" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15048.531399601401!2d29.2901824!3d40.8248644!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cadd80fdf511ef%3A0xfaec609de05b6131!2sSvadba%20Tuzla%20Marina!5e1!3m2!1str!2str!4v1744968991432!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <img src="qr_placeholder.png" alt="Konum QR Kodu" class="qr">
   </div>
 
