--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     img.qr { margin-top: 1.5rem;width: 100px;height: 100px; }
     img.banner { width: 140px;height: auto;border-radius: 1rem;margin-bottom: 1rem;box-shadow: 0 4px 8px rgba(0,0,0,.08); }
     #countdown { margin: 1.2rem 0 0.5rem;font-size: 1.4rem;font-weight: 600;color: var(--primary-dark); }
-    iframe.map { width: 100%;height: 320px;border: 0;border-radius: 1rem;box-shadow: 0 2px 6px rgba(0,0,0,.06); }
+    iframe.map{width:100%;height:320px;border:0;border-radius:1rem;box-shadow:0 2px 6px rgba(0,0,0,.06)}
   </style>
 </head>
 <body>
@@ -104,7 +104,7 @@
   </script>
 
   <div class="card">
-    <img src="banner_placeholder.jpg" alt="Gözde &amp; Yiğit" class="banner">
+    <img src="banner_placeholder.png" alt="Gözde &amp; Yiğit" class="banner">
     <h1>Gözde &amp; Yiğit</h1>
     <h2>19 Temmuz 2025</h2>
     <div class="divider"></div>
